// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "gap" and "gapVertical" props 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  padding-left: 5rem;
  padding-right: 5rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      1
    </div>
    <div
      class="emotion-0"
    >
      2
    </div>
  </div>
</div>
`;

exports[`should accept "gap" and "gapVertical" props 2`] = `
.emotion-0 {
  padding-left: 5rem;
  padding-right: 5rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      1
    </div>
    <div
      class="emotion-0"
    >
      2
    </div>
  </div>
</div>
`;

exports[`should accept "gap" and "gapVertical" props 3`] = `
.emotion-0 {
  padding-left: 5rem;
  padding-right: 5rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      1
    </div>
    <div
      class="emotion-0"
    >
      2
    </div>
  </div>
</div>
`;

exports[`should accept "gap" and "gapVertical" props 4`] = `
.emotion-0 {
  padding-left: 5rem;
  padding-right: 5rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      1
    </div>
    <div
      class="emotion-0"
    >
      2
    </div>
  </div>
</div>
`;

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: red;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should accept flex container props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;
